Fix audit tab
